Modified lotteryService and prepare Dockerfile, docker-compose.yml